--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -5,7 +5,10 @@ p = link_to 'New Test', new_admin_test_path
 - if @tests.present?
   table
     tr
-      th Title
+      th.sort-by-title.pointer
+        = Title
+        = octicon 'arrow-up', class: 'text-success hide'
+        = octicon 'arrow-down', class: 'text-success hide'
       th Category
       th Level
       th Questions count
