Fix views, fix correct/incorrect input show

--- a/app/views/tests/index.html.slim
+++ b/app/views/tests/index.html.slim
@@ -4,7 +4,7 @@ h1 Tests
   table
     tr
       th.sort-by-title.pointer
-        = Title
+        | Title
         = octicon 'arrow-up', class: 'text-success hide'
         = octicon 'arrow-down', class: 'text-success hide'
       th Category
