--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -6,7 +6,7 @@ p = link_to 'New Test', new_admin_test_path
   table
     tr
       th.sort-by-title.pointer
-        = Title
+        | Title
         = octicon 'arrow-up', class: 'text-success hide'
         = octicon 'arrow-down', class: 'text-success hide'
       th Category
