--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -3,7 +3,7 @@ h1 Tests
 p = link_to 'New Test', new_admin_test_path
 
 - if @tests.present?
-  table
+  table id="tests_table"
     tr
       th.sort-by-title.pointer
         | Title
