fix application.js,refactor registration to work with correct fields, refactor sorting(foreach), fix tabs in all fs files, update all views add id's

--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -3,7 +3,7 @@ h1 Tests
 p = link_to 'New Test', new_admin_test_path
 
 - if @tests.present?
-  table id="tests_table"
+  table id="admin_tests"
     tr
       th.sort-by-title.pointer
         | Title
