--- a/app/views/admin/tests/_test.html.slim
+++ b/app/views/admin/tests/_test.html.slim
@@ -1,8 +1,10 @@
 tr
-  td = test.title
+  td
+    = content_tag :span, test.title, class: 'test-title', data: { test_id: test.id }
+    = render 'form_inline', test: @test == test ? @test : test
   td = test.category.title
   td = test.level
   td = test.questions.count
   td = link_to 'Show', admin_test_path(test)
-  td = link_to 'Edit', edit_admin_test_path(test)
+  td = link_to 'Edit', edit_admin_test_path(test), data: { test_id: test.id }, class: 'form-inline-link'
   td = link_to 'Delete', admin_test_path(test), method: :delete, data: { confirm: 'Are you sure?' }
