--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -2,6 +2,8 @@ h1 Tests
 
 p = link_to 'New Test', new_admin_test_path
 
+=render 'shared/errors', resource: @test
+
 - if @tests.present?
   table id="admin_tests"
     tr
