--- a/app/views/shared/_errors.html.slim
+++ b/app/views/shared/_errors.html.slim
@@ -1,7 +1,6 @@
-- if resource.errors.any?
-  div id="error_explanation"
-    h2 #{pluralize(resource.errors.count, "error")} prohibited this answer from being saved:
-
+- if resource.present? && resource.errors.any?
+  = content_tag :div, class: 'resource-errors', data: { resource_id: resource.id } do
+    h2 #{pluralize(resource.errors.count, "error")}
     ul
       - resource.errors.full_messages.each do |message|
         li = message
