Fix migrations, user model, refactor seeds, fix change to admin panel, fix sorting, fix form_inline, add root path

--- a/app/views/admin/tests/_form_inline.html.slim
+++ b/app/views/admin/tests/_form_inline.html.slim
@@ -4,4 +4,4 @@
             data: { test_id: test.id }, \
             class: 'form-inline hide' do |f|
   = f.text_field :title
-  = f.submit t('.submit')
+  = f.submit "Ok"
