--- a/app/views/tests/index.html.slim
+++ b/app/views/tests/index.html.slim
@@ -1,7 +1,7 @@
 h1 Tests
 
 - if @tests.present?
-  table id="user_tests"
+  table#table_tests
     tr
       th.sort-by-title.pointer
         | Title
