Add gists page to admin panel(nav_bar), add working links to created gist(add gem sanitize), refactor seeds

--- a/app/views/admin/gists/index.html.slim
+++ b/app/views/admin/gists/index.html.slim
@@ -4,9 +4,9 @@ h1.mt-3.mb-3 = t('.header')
   table.table.table-striped
     thead
       tr
-        th = User.model_name.human
-        th = Question.model_name.human
-        th = Gist.human_attribute_name(:url)
+        th User
+        th Question
+        th Gist URL
 
     tbody
       = render @gists
