--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,2 @@
 - flash.each do |type, message|
-  = content_tag :p, message, class: "flash #{type}"
+  = content_tag :p, sanitize(message), class: "flash #{type}"
