Refactor views admin to add timers to tests, user to show timer for different tests, and show "time to end"

--- a/app/views/admin/tests/_form.html.slim
+++ b/app/views/admin/tests/_form.html.slim
@@ -15,4 +15,9 @@
     = f.collection_select(:category_id, Category.all, :id, :title)
 
   p
+    = f.label :timer
+    br
+    = f.number_field :timer
+
+  p
     = f.submit 'Save'
