--- a/app/views/tests/_test.html.slim
+++ b/app/views/tests/_test.html.slim
@@ -3,4 +3,5 @@ tr
   td = test.category.title
   td = test.level
   td = test.questions.count
+  td = test.timer
   td = button_to 'Start', start_test_path(test), method: :post
