--- a/app/views/admin/tests/index.html.slim
+++ b/app/views/admin/tests/index.html.slim
@@ -14,6 +14,7 @@ p = link_to 'New Test', new_admin_test_path
       th Category
       th Level
       th Questions count
+      th Time to pass
       th colspan='3' Actions
 
     = render @tests
