--- a/app/views/test_passages/show.html.slim
+++ b/app/views/test_passages/show.html.slim
@@ -1,3 +1,4 @@
+- test = @test_passage.test
 - questions_count = @test_passage.test.questions.count
 - current_question_number = @test_passage.current_question_number
 
@@ -11,13 +12,18 @@ p
     | %
 h1 Passing the #{@test_passage.test.title} Test
 
+- if test.timer?
+  p
+    => t('.timer')
+    = content_tag :span, nil, class: 'timer', data: { seconds: @test_passage.time_left }
+
 b = pluralize(questions_count, 'question')
 br
 b Question №#{current_question_number}
 br
 b = @test_passage.current_question.body
 
-= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form|
+= form_with url: test_passage_path(@test_passage), local: true, method: :put, id: 'answer-form' do |form|
   = form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b|
     p
       = b.check_box id: "answer_ids_#{b.object.id}"
