--- a/app/views/admin/badges/index.html.slim
+++ b/app/views/admin/badges/index.html.slim
@@ -9,8 +9,9 @@ p = link_to 'New Badge', new_admin_badge_path
     tr
       th Title
       th Image_url
-      th Rule_name
-      th Rule_value
+      th Rule
+      th Rule value
+      th Description
       th colspan='3' Actions
 
     = render @badges
