--- a/app/views/admin/badges/show.html.slim
+++ b/app/views/admin/badges/show.html.slim
@@ -2,6 +2,6 @@ h1 #{@badge.title} badge
 
 img src=@badge.image_url width="100" height="100"  alt=@badge.title
 
-= link_to t('.edit'), edit_admin_badge_path(@badge)
+= link_to 'Edit', edit_admin_badge_path(@badge)
 br
-= link_to t('.back'), admin_badges_path
+= link_to 'Back', admin_badges_path
